# DaGemini

./: Makefile  README.md  app.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: test.ipynb
pages/: 2_Interactive Visualization Tool.py
scr/agents/: base.py  pandas_agent.py
scr/models/: llms.py
scr/prompts/: prompts.py
scr/tools/: tools.py  tools_ori.py
